@@ -34,6 +34,7 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
   * Changed the information displayed in the "Plugins & Scripts" for scripts
     that do not call register() to show up as "" for the name and description
     and "unknown" for the version
+  * /reloadall will now reload scripts in the same order they were loaded
 
 ------------------------------------------------------------------------------
  2.8.6 - 11/Jun/2008
